--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "u98/step-step",
+    "name": "u98/laravel-step",
     "description": "A package for my verify host",
     "type": "laravel-package",
     "authors": [
